deploy: 09ca8ee205c683f51ee6ac22c9c6d0a98c16de69

--- a/genindex.html
+++ b/genindex.html
@@ -834,6 +834,8 @@
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4I0EN8APyFixed8APyFixedEii3_IT3_IT">APyFixed::APyFixed (C++ function)</a>, <a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed8APyFixedENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[1]</a>, <a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed8APyFixedERK8APyFixed">[2]</a>, <a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed8APyFixedERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">[3]</a>, <a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed8APyFixedEii">[4]</a>, <a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed8APyFixedEiiNSt16initializer_listI10apy_limb_tEE">[5]</a>, <a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed8APyFixedEiiRK13ScratchVectorI10apy_limb_tE">[6]</a>, <a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed8APyFixedEiiRKNSt6vectorI10apy_limb_tEE">[7]</a>, <a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed8APyFixedEv">[8]</a>
 </li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed16as_integer_ratioEv">APyFixed::as_integer_ratio (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed25bit_pattern_to_string_decEv">APyFixed::bit_pattern_to_string_dec (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed4bitsEv">APyFixed::bits (C++ function)</a>
@@ -958,6 +960,8 @@
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed9to_doubleEv">APyFixed::to_double (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed11to_fractionEv">APyFixed::to_fraction (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed9to_stringEi">APyFixed::to_string (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed13to_string_decEv">APyFixed::to_string_dec (C++ function)</a>
@@ -965,6 +969,8 @@
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed13to_string_hexEv">APyFixed::to_string_hex (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed13to_string_octEv">APyFixed::to_string_oct (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed14trailing_zerosEv">APyFixed::trailing_zeros (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed11vector_sizeEv">APyFixed::vector_size (C++ function)</a>
 </li>
@@ -1040,10 +1046,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray12is_same_specERK13APyFixedArray">APyFixedArray::is_same_spec (C++ function)</a>, <a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray12is_same_specERK8APyFixed">[1]</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3maxERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::max (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3minERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::min (C++ function)</a>
@@ -1143,6 +1149,8 @@
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat3absEv">APyFloat::abs (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatENSt7uint8_tENSt7uint8_tE5exp_t">APyFloat::APyFloat (C++ function)</a>, <a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatENSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">[1]</a>, <a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatERK12APyFloatDataNSt7uint8_tENSt7uint8_tE5exp_t">[2]</a>, <a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatEb5exp_t5man_tNSt7uint8_tENSt7uint8_tE5exp_t">[3]</a>, <a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8APyFloatEb5exp_t5man_tNSt7uint8_tENSt7uint8_tENSt8optionalI5exp_tEE">[4]</a>
+</li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat16as_integer_ratioEv">APyFloat::as_integer_ratio (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat4castENSt8optionalIiEENSt8optionalIiEENSt8optionalI5exp_tEENSt8optionalI16QuantizationModeEE">APyFloat::cast (C++ function)</a>
 </li>
@@ -1307,6 +1315,8 @@
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat9to_doubleEv">APyFloat::to_double (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat8to_fixedEv">APyFloat::to_fixed (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat11to_fractionEv">APyFloat::to_fraction (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat8true_expEv">APyFloat::true_exp (C++ function)</a>
 </li>
@@ -2312,10 +2322,10 @@
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_gte_pow2b22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_gte_pow2 (C++ function)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E23limb_vector_is_negativeb22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_is_negative (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E19limb_vector_is_zerob22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_is_zero (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E24limb_vector_leading_onesNSt6size_tE22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_leading_ones (C++ function)</a>
@@ -2343,6 +2353,8 @@
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_test_bitb22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_test_bit (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E21limb_vector_to_uint64NSt8uint64_tERK11VECTOR_TYPENSt6size_tE">limb_vector_to_uint64 (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E26limb_vector_trailing_zerosNSt6size_tE22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_trailing_zeros (C++ function)</a>
 </li>
     </ul></td>
   </tr></table>
