deploy: 2152eba44cbd426b75db775a3880acccab9d4ca0

--- a/genindex.html
+++ b/genindex.html
@@ -2222,7 +2222,7 @@
         </ul></li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv44ipow5man_tj">ipow (C++ function)</a>
 </li>
-        <li><a href="cpp_api/broadcast.html#_CPPv416is_broadcastableRKNSt6vectorINSt6size_tEEERKNSt6vectorINSt6size_tEEE">is_broadcastable (C++ function)</a>
+        <li><a href="cpp_api/broadcast.html#_CPPv416is_broadcastableRKNSt6vectorINSt6size_tEEERKNSt6vectorINSt6size_tEEE">is_broadcastable (C++ function)</a>, <a href="cpp_api/broadcast.html#_CPPv4I00E16is_broadcastableb20RANDOM_ACCESS_IT_SRC20RANDOM_ACCESS_IT_SRC20RANDOM_ACCESS_IT_DST20RANDOM_ACCESS_IT_DST">[1]</a>
 </li>
         <li><a href="api/apyfloat.html#apytypes.APyFloat.is_finite">is_finite (apytypes.APyFloat property)</a>
 
