--- a/genindex.html
+++ b/genindex.html
@@ -1990,12 +1990,12 @@
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct1fE">FloatingPointInnerProduct::f (C++ member)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct25FloatingPointInnerProductERK12APyFloatSpecRK12APyFloatSpecRK12APyFloatSpecRK16QuantizationMode">FloatingPointInnerProduct::FloatingPointInnerProduct (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4I_b_bENK25FloatingPointInnerProduct13inner_productEvPK12APyFloatDataPK12APyFloatDataP12APyFloatDataNSt6size_tENSt6size_tENSt6size_tE">FloatingPointInnerProduct::inner_product (C++ function)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct11mul_generalE">FloatingPointInnerProduct::mul_general (C++ member)</a>
 </li>
         <li><a href="cpp_api/apyfloat_util.html#_CPPv4N25FloatingPointInnerProduct9mul_shortE">FloatingPointInnerProduct::mul_short (C++ member)</a>
@@ -2104,6 +2104,16 @@
         </ul></li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv416from_nibble_listRKNSt6vectorINSt7uint8_tEEE">from_nibble_list (C++ function)</a>
 </li>
+        <li><a href="api/apycfixed.html#apytypes.APyCFixed.from_number">from_number() (apytypes.APyCFixed method)</a>
+
+        <ul>
+          <li><a href="api/apycfloat.html#apytypes.APyCFloat.from_number">(apytypes.APyCFloat method)</a>
+</li>
+          <li><a href="api/apyfixed.html#apytypes.APyFixed.from_number">(apytypes.APyFixed method)</a>
+</li>
+          <li><a href="api/apyfloat.html#apytypes.APyFloat.from_number">(apytypes.APyFloat method)</a>
+</li>
+        </ul></li>
         <li><a href="api/apyfixed.html#apytypes.APyFixed.from_str">from_str() (apytypes.APyFixed method)</a>
 </li>
         <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.full">full() (apytypes.APyCFixedArray method)</a>
