deploy: 6c0ee5a131b8679b4b2ea4313ea992d1da49756b

--- a/genindex.html
+++ b/genindex.html
@@ -692,6 +692,10 @@
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed15python_deepcopyERKN2nb5typedIN2nb4dictEN2nb4int_EN2nb3anyEEE">APyCFixed::python_deepcopy (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed13python_pickleEv">APyCFixed::python_pickle (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4N9APyCFixed15python_unpickleEP9APyCFixedRKNSt5tupleIiiNSt6vectorINSt8uint64_tEEEEE">APyCFixed::python_unpickle (C++ function)</a>
+</li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed4reprEv">APyCFixed::repr (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed4specEv">APyCFixed::spec (C++ function)</a>
@@ -787,6 +791,10 @@
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArraycoEv">APyCFixedArray::operator~ (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4prodERKNSt8optionalI14PyShapeParam_tEE">APyCFixedArray::prod (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray13python_pickleEv">APyCFixedArray::python_pickle (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray15python_unpickleEP14APyCFixedArrayRKNSt5tupleIiiNSt6vectorINSt6size_tEEENSt6vectorINSt8uint64_tEEEEE">APyCFixedArray::python_unpickle (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4rdivERK9APyCFixed">APyCFixedArray::rdiv (C++ function)</a>
 </li>
@@ -940,6 +948,10 @@
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed15python_deepcopyERKN2nb5typedIN2nb4dictEN2nb4int_EN2nb3anyEEE">APyFixed::python_deepcopy (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed13python_pickleEv">APyFixed::python_pickle (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixed.html#_CPPv4N8APyFixed15python_unpickleEP8APyFixedRKNSt5tupleIiiNSt6vectorINSt8uint64_tEEEEE">APyFixed::python_unpickle (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed9read_dataEv">APyFixed::read_data (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixed.html#_CPPv4NK8APyFixed4reprEv">APyFixed::repr (C++ function)</a>
@@ -1087,6 +1099,10 @@
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArraycoEv">APyFixedArray::operator~ (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray4prodERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::prod (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray13python_pickleEv">APyFixedArray::python_pickle (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray15python_unpickleEP13APyFixedArrayRKNSt5tupleIiiNSt6vectorINSt6size_tEEENSt6vectorINSt8uint64_tEEEEE">APyFixedArray::python_unpickle (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray4rdivERK8APyFixed">APyFixedArray::rdiv (C++ function)</a>
 </li>
@@ -1296,6 +1312,10 @@
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat15python_deepcopyERKN2nb5typedIN2nb4dictEN2nb4int_EN2nb3anyEEE">APyFloat::python_deepcopy (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat13python_pickleEv">APyFloat::python_pickle (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat15python_unpickleEP8APyFloatRKNSt5tupleIN12APyFloatSpec5TupleEN12APyFloatData5TupleEEE">APyFloat::python_unpickle (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4NK8APyFloat4reprEv">APyFloat::repr (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloat.html#_CPPv4N8APyFloat8set_dataERK12APyFloatData">APyFloat::set_data (C++ function)</a>
@@ -1483,6 +1503,10 @@
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArraycoEv">APyFloatArray::operator~ (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray4prodERKNSt8optionalI14PyShapeParam_tEE">APyFloatArray::prod (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray13python_pickleEv">APyFloatArray::python_pickle (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apyfloatarray.html#_CPPv4N13APyFloatArray15python_unpickleEP13APyFloatArrayRKNSt5tupleIN12APyFloatSpec5TupleENSt6vectorINSt6size_tEEENSt6vectorIN12APyFloatData5TupleEEEEE">APyFloatArray::python_unpickle (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfloatarray.html#_CPPv4NK13APyFloatArray4rdivERK8APyFloat">APyFloatArray::rdiv (C++ function)</a>
 </li>
@@ -2348,6 +2372,8 @@
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I00E28limb_vector_copy_sign_extendv25RANDOM_ACCESS_ITERATOR_IN25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUT26RANDOM_ACCESS_ITERATOR_OUT">limb_vector_copy_sign_extend (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4I00E24limb_vector_from_u64_vec15VEC_RETURN_TYPE16RANDOM_ACCESS_IT16RANDOM_ACCESS_IT">limb_vector_from_u64_vec (C++ function)</a>, <a href="cpp_api/apytypes_util.html#_CPPv4I00E24limb_vector_from_u64_vec15VEC_RETURN_TYPERK14VEC_INPUT_TYPE">[1]</a>
+</li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_gte_pow2b22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_gte_pow2 (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E23limb_vector_is_negativeb22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_is_negative (C++ function)</a>
@@ -2379,6 +2405,8 @@
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_sub_pow210apy_limb_t22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_sub_pow2 (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_test_bitb22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_test_bit (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E22limb_vector_to_u64_vecNSt6vectorINSt8uint64_tEEE16RANDOM_ACCESS_IT16RANDOM_ACCESS_IT">limb_vector_to_u64_vec (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E21limb_vector_to_uint64NSt8uint64_tERK11VECTOR_TYPENSt6size_tE">limb_vector_to_uint64 (C++ function)</a>
 </li>
