--- a/genindex.html
+++ b/genindex.html
@@ -298,7 +298,7 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#Q"><strong>Q</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a> | <a href="#W"><strong>W</strong></a> | <a href="#Z"><strong>Z</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#J"><strong>J</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#O"><strong>O</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#Q"><strong>Q</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a> | <a href="#W"><strong>W</strong></a> | <a href="#Z"><strong>Z</strong></a></div>
 </section>
 <section id="_" class="genindex-section">
   <h2>_</h2>
@@ -634,6 +634,8 @@
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed4castENSt8optionalIiEENSt8optionalIiEENSt8optionalI16QuantizationModeEENSt8optionalI12OverflowModeEENSt8optionalIiEE">APyCFixed::cast (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apycfixed.html#_CPPv4NK9APyCFixed4conjEv">APyCFixed::conj (C++ function)</a>
+</li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4I0EN9APyCFixed11copy_n_fromEv22RANDOM_ACCESS_ITERATORNSt6size_tE">APyCFixed::copy_n_from (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixed.html#_CPPv4I0ENK9APyCFixed9copy_n_toEv22RANDOM_ACCESS_ITERATORNSt6size_tE">APyCFixed::copy_n_to (C++ function)</a>
@@ -732,6 +734,8 @@
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray21checked_inner_productERK14APyCFixedArrayNSt8optionalI25APyFixedAccumulatorOptionEE">APyCFixedArray::checked_inner_product (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray4conjEv">APyCFixedArray::conj (C++ function)</a>
+</li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray8convolveERK14APyCFixedArrayRKNSt6stringE">APyCFixedArray::convolve (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray12create_arrayERKNSt6vectorINSt6size_tEEE">APyCFixedArray::create_array (C++ function)</a>
@@ -757,6 +761,8 @@
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray8get_imagEv">APyCFixedArray::get_imag (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray8get_realEv">APyCFixedArray::get_real (C++ function)</a>
+</li>
+        <li><a href="cpp_api/apycfixedarray.html#_CPPv4NK14APyCFixedArray19hermitian_transposeEv">APyCFixedArray::hermitian_transpose (C++ function)</a>
 </li>
         <li><a href="cpp_api/apycfixedarray.html#_CPPv4N14APyCFixedArray8identityERKN2nb4int_ENSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyCFixedArray::identity (C++ function)</a>
 </li>
@@ -1060,10 +1066,10 @@
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray6matmulERK13APyFixedArray">APyFixedArray::matmul (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3maxERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::max (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3maxERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::max (C++ function)</a>
+</li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4NK13APyFixedArray3minERKNSt8optionalI14PyShapeParam_tEE">APyFixedArray::min (C++ function)</a>
 </li>
         <li><a href="cpp_api/apyfixedarray.html#_CPPv4N13APyFixedArray4onesERK14PyShapeParam_tNSt8optionalIiEENSt8optionalIiEENSt8optionalIiEE">APyFixedArray::ones (C++ function)</a>
@@ -1730,8 +1736,6 @@
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct8prod_immE">ComplexFixedPointInnerProduct::prod_imm (C++ member)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct7productE">ComplexFixedPointInnerProduct::product (C++ member)</a>
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct12product_bitsE">ComplexFixedPointInnerProduct::product_bits (C++ member)</a>
@@ -1740,6 +1744,8 @@
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct13product_limbsE">ComplexFixedPointInnerProduct::product_limbs (C++ member)</a>
 </li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct10src1_limbsE">ComplexFixedPointInnerProduct::src1_limbs (C++ member)</a>
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4N29ComplexFixedPointInnerProduct10src2_limbsE">ComplexFixedPointInnerProduct::src2_limbs (C++ member)</a>
@@ -1754,6 +1760,16 @@
 </li>
         <li><a href="cpp_api/apycfixed_util.html#_CPPv4NK25ComplexFixedPointToDoubleclE16RANDOM_ACCESS_IT16RANDOM_ACCESS_IT">ComplexFixedPointToDouble::operator() (C++ function)</a>
 </li>
+        <li><a href="api/apycfixed.html#apytypes.APyCFixed.conj">conj() (apytypes.APyCFixed method)</a>
+
+        <ul>
+          <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.conj">(apytypes.APyCFixedArray method)</a>
+</li>
+          <li><a href="api/apycfloat.html#apytypes.APyCFloat.conj">(apytypes.APyCFloat method)</a>
+</li>
+          <li><a href="api/apycfloatarray.html#apytypes.APyCFloatArray.conj">(apytypes.APyCFloatArray method)</a>
+</li>
+        </ul></li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv414ContextManager">ContextManager (C++ class)</a>
 </li>
         <li><a href="cpp_api/apytypes_common.html#_CPPv4N14ContextManager13enter_contextEv">ContextManager::enter_context (C++ function)</a>
@@ -1774,12 +1790,20 @@
           <li><a href="api/arrayfunctions.html#apytypes.convolve">(in module apytypes)</a>
 </li>
         </ul></li>
-        <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.copy">copy() (apytypes.APyCFixedArray method)</a>
+        <li><a href="api/apycfixed.html#apytypes.APyCFixed.copy">copy() (apytypes.APyCFixed method)</a>
 
         <ul>
+          <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.copy">(apytypes.APyCFixedArray method)</a>
+</li>
+          <li><a href="api/apycfloat.html#apytypes.APyCFloat.copy">(apytypes.APyCFloat method)</a>
+</li>
           <li><a href="api/apycfloatarray.html#apytypes.APyCFloatArray.copy">(apytypes.APyCFloatArray method)</a>
 </li>
+          <li><a href="api/apyfixed.html#apytypes.APyFixed.copy">(apytypes.APyFixed method)</a>
+</li>
           <li><a href="api/apyfixedarray.html#apytypes.APyFixedArray.copy">(apytypes.APyFixedArray method)</a>
+</li>
+          <li><a href="api/apyfloat.html#apytypes.APyFloat.copy">(apytypes.APyFloat method)</a>
 </li>
           <li><a href="api/apyfloatarray.html#apytypes.APyFloatArray.copy">(apytypes.APyFloatArray method)</a>
 </li>
@@ -2206,6 +2230,28 @@
   </tr></table>
 </section>
 
+<section id="H" class="genindex-section">
+  <h2>H</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.H">H (apytypes.APyCFixedArray property)</a>
+
+        <ul>
+          <li><a href="api/apycfloatarray.html#apytypes.APyCFloatArray.H">(apytypes.APyCFloatArray property)</a>
+</li>
+        </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="api/apycfixedarray.html#apytypes.APyCFixedArray.hermitian_transpose">hermitian_transpose() (apytypes.APyCFixedArray method)</a>
+
+        <ul>
+          <li><a href="api/apycfloatarray.html#apytypes.APyCFloatArray.hermitian_transpose">(apytypes.APyCFloatArray method)</a>
+</li>
+        </ul></li>
+    </ul></td>
+  </tr></table>
+</section>
+
 <section id="I" class="genindex-section">
   <h2>I</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
@@ -2370,16 +2416,18 @@
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E15limb_vector_asrv22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_asr (C++ function)</a>
 </li>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4I00E30limb_vector_copy_n_sign_extendv25RANDOM_ACCESS_ITERATOR_INNSt6size_tE26RANDOM_ACCESS_ITERATOR_OUTNSt6size_tE">limb_vector_copy_n_sign_extend (C++ function)</a>
+</li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I00E28limb_vector_copy_sign_extendv25RANDOM_ACCESS_ITERATOR_IN25RANDOM_ACCESS_ITERATOR_IN26RANDOM_ACCESS_ITERATOR_OUT26RANDOM_ACCESS_ITERATOR_OUT">limb_vector_copy_sign_extend (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I00E24limb_vector_from_u64_vec15VEC_RETURN_TYPE16RANDOM_ACCESS_IT16RANDOM_ACCESS_IT">limb_vector_from_u64_vec (C++ function)</a>, <a href="cpp_api/apytypes_util.html#_CPPv4I00E24limb_vector_from_u64_vec15VEC_RETURN_TYPERK14VEC_INPUT_TYPE">[1]</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E20limb_vector_gte_pow2b22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATORj">limb_vector_gte_pow2 (C++ function)</a>
 </li>
-        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E23limb_vector_is_negativeb22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_is_negative (C++ function)</a>
-</li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E23limb_vector_is_negativeb22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_is_negative (C++ function)</a>
+</li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E19limb_vector_is_zerob22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_is_zero (C++ function)</a>
 </li>
         <li><a href="cpp_api/apytypes_util.html#_CPPv4I0E24limb_vector_leading_onesNSt6size_tE22RANDOM_ACCESS_ITERATOR22RANDOM_ACCESS_ITERATOR">limb_vector_leading_ones (C++ function)</a>
